--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-hacker
+title: cloud_cellar
+description: follow us
+### [@cloudcellar] (https://www.instagram.com/cloud_cellar/)
+
